Trabalho2/y.output
State 33 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: lista_definicoes

    2 lista_definicoes: definicao
    3                 | definicao lista_definicoes

    4 definicao: def_variavel
    5          | def_funcao

    6 def_variavel: TK_ID ':' tipo ';'

    7 lista_def_var: lista_def_var def_variavel
    8              | /* empty */

    9 tipo: tipo_primitivo
   10     | tipo '[' ']'

   11 tipo_primitivo: TK_INT
   12               | TK_FLOAT
   13               | TK_CHAR
   14               | TK_VOID

   15 def_funcao: TK_ID '(' parametros ')' ':' tipo bloco

   16 parametros: lista_params
   17           | /* empty */

   18 lista_params: parametro
   19             | parametro ',' parametros

   20 parametro: TK_ID ':' tipo

   21 bloco: '{' lista_def_var lista_comandos '}'

   22 lista_comandos: lista_comandos comando
   23               | /* empty */

   24 comando: bloco
   25        | expressao ';'
   26        | '@' expressao ';'
   27        | cmd_return
   28        | variavel '=' expressao ';'
   29        | TK_IF expLogica bloco
   30        | TK_IF expLogica bloco TK_ELSE bloco
   31        | TK_WHILE expLogica bloco

   32 cmd_return: TK_RETURN expressao ';'

   33 variavel: TK_ID
   34         | expressao_base '[' expLogica ']'

   35 chamada: TK_ID '(' expressoes ')'

   36 expressoes: lista_exp
   37           | /* empty */

   38 lista_exp: expLogica
   39          | expLogica ',' lista_exp

   40 expressao_base: TK_DEC
   41               | TK_REAL
   42               | TK_STRING
   43               | variavel
   44               | '(' expLogica ')'
   45               | chamada

   46 expressao: expNew
   47          | expAs

   48 expAs: expLogica TK_AS tipo

   49 expNew: TK_NEW tipo '[' expLogica ']'
   50       | expLogica

   51 expLogica: expLogica TK_OR expAnd
   52          | expAnd

   53 expAnd: expCmp
   54       | expAnd TK_AND expCmp

   55 opCmp: TK_EQUAL
   56      | TK_NOTEQUAL
   57      | TK_LESSEQUAL
   58      | TK_GREATEREQUAL
   59      | '<'
   60      | '>'

   61 expCmp: expCmp opCmp expAdd
   62       | expAdd

   63 addOp: '+'
   64      | '-'

   65 expAdd: expAdd addOp expMult
   66       | expMult

   67 multOp: '*'
   68       | '/'

   69 expMult: expMult multOp expUnaria
   70        | expUnaria

   71 expUnaria: expressao_base
   72          | '-' expressao_base
   73          | '!' expressao_base


Terminals, with rules where they appear

$end (0) 0
'!' (33) 73
'(' (40) 15 35 44
')' (41) 15 35 44
'*' (42) 67
'+' (43) 63
',' (44) 19 39
'-' (45) 64 72
'/' (47) 68
':' (58) 6 15 20
';' (59) 6 25 26 28 32
'<' (60) 59
'=' (61) 28
'>' (62) 60
'@' (64) 26
'[' (91) 10 34 49
']' (93) 10 34 49
'{' (123) 21
'}' (125) 21
error (256)
TK_INT (258) 11
TK_FLOAT (259) 12
TK_CHAR (260) 13
TK_VOID (261) 14
TK_NEW (262) 49
TK_IF (263) 29 30
TK_ELSE (264) 30
TK_WHILE (265) 31
TK_AS (266) 48
TK_RETURN (267) 32
TK_DEC (268) 40
TK_REAL (269) 41
TK_ID (270) 6 15 20 33 35
TK_EQUAL (271) 55
TK_NOTEQUAL (272) 56
TK_LESSEQUAL (273) 57
TK_GREATEREQUAL (274) 58
TK_AND (275) 54
TK_OR (276) 51
TK_STRING (277) 42


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
programa (42)
    on left: 1, on right: 0
lista_definicoes (43)
    on left: 2 3, on right: 1 3
definicao (44)
    on left: 4 5, on right: 2 3
def_variavel (45)
    on left: 6, on right: 4 7
lista_def_var (46)
    on left: 7 8, on right: 7 21
tipo (47)
    on left: 9 10, on right: 6 10 15 20 48 49
tipo_primitivo (48)
    on left: 11 12 13 14, on right: 9
def_funcao (49)
    on left: 15, on right: 5
parametros (50)
    on left: 16 17, on right: 15 19
lista_params (51)
    on left: 18 19, on right: 16
parametro (52)
    on left: 20, on right: 18 19
bloco (53)
    on left: 21, on right: 15 24 29 30 31
lista_comandos (54)
    on left: 22 23, on right: 21 22
comando (55)
    on left: 24 25 26 27 28 29 30 31, on right: 22
cmd_return (56)
    on left: 32, on right: 27
variavel (57)
    on left: 33 34, on right: 28 43
chamada (58)
    on left: 35, on right: 45
expressoes (59)
    on left: 36 37, on right: 35
lista_exp (60)
    on left: 38 39, on right: 36 39
expressao_base (61)
    on left: 40 41 42 43 44 45, on right: 34 71 72 73
expressao (62)
    on left: 46 47, on right: 25 26 28 32
expAs (63)
    on left: 48, on right: 47
expNew (64)
    on left: 49 50, on right: 46
expLogica (65)
    on left: 51 52, on right: 29 30 31 34 38 39 44 48 49 50 51
expAnd (66)
    on left: 53 54, on right: 51 52 54
opCmp (67)
    on left: 55 56 57 58 59 60, on right: 61
expCmp (68)
    on left: 61 62, on right: 53 54 61
addOp (69)
    on left: 63 64, on right: 65
expAdd (70)
    on left: 65 66, on right: 61 62 65
multOp (71)
    on left: 67 68, on right: 69
expMult (72)
    on left: 69 70, on right: 65 66 69
expUnaria (73)
    on left: 71 72 73, on right: 69 70


state 0

    0 $accept: . programa $end

    TK_ID  shift, and go to state 1

    programa          go to state 2
    lista_definicoes  go to state 3
    definicao         go to state 4
    def_variavel      go to state 5
    def_funcao        go to state 6


state 1

    6 def_variavel: TK_ID . ':' tipo ';'
   15 def_funcao: TK_ID . '(' parametros ')' ':' tipo bloco

    ':'  shift, and go to state 7
    '('  shift, and go to state 8


state 2

    0 $accept: programa . $end

    $end  shift, and go to state 9


state 3

    1 programa: lista_definicoes .

    $default  reduce using rule 1 (programa)


state 4

    2 lista_definicoes: definicao .
    3                 | definicao . lista_definicoes

    TK_ID  shift, and go to state 1

    $default  reduce using rule 2 (lista_definicoes)

    lista_definicoes  go to state 10
    definicao         go to state 4
    def_variavel      go to state 5
    def_funcao        go to state 6


state 5

    4 definicao: def_variavel .

    $default  reduce using rule 4 (definicao)


state 6

    5 definicao: def_funcao .

    $default  reduce using rule 5 (definicao)


state 7

    6 def_variavel: TK_ID ':' . tipo ';'

    TK_INT    shift, and go to state 11
    TK_FLOAT  shift, and go to state 12
    TK_CHAR   shift, and go to state 13
    TK_VOID   shift, and go to state 14

    tipo            go to state 15
    tipo_primitivo  go to state 16


state 8

   15 def_funcao: TK_ID '(' . parametros ')' ':' tipo bloco

    TK_ID  shift, and go to state 17

    $default  reduce using rule 17 (parametros)

    parametros    go to state 18
    lista_params  go to state 19
    parametro     go to state 20


state 9

    0 $accept: programa $end .

    $default  accept


state 10

    3 lista_definicoes: definicao lista_definicoes .

    $default  reduce using rule 3 (lista_definicoes)


state 11

   11 tipo_primitivo: TK_INT .

    $default  reduce using rule 11 (tipo_primitivo)


state 12

   12 tipo_primitivo: TK_FLOAT .

    $default  reduce using rule 12 (tipo_primitivo)


state 13

   13 tipo_primitivo: TK_CHAR .

    $default  reduce using rule 13 (tipo_primitivo)


state 14

   14 tipo_primitivo: TK_VOID .

    $default  reduce using rule 14 (tipo_primitivo)


state 15

    6 def_variavel: TK_ID ':' tipo . ';'
   10 tipo: tipo . '[' ']'

    ';'  shift, and go to state 21
    '['  shift, and go to state 22


state 16

    9 tipo: tipo_primitivo .

    $default  reduce using rule 9 (tipo)


state 17

   20 parametro: TK_ID . ':' tipo

    ':'  shift, and go to state 23


state 18

   15 def_funcao: TK_ID '(' parametros . ')' ':' tipo bloco

    ')'  shift, and go to state 24


state 19

   16 parametros: lista_params .

    $default  reduce using rule 16 (parametros)


state 20

   18 lista_params: parametro .
   19             | parametro . ',' parametros

    ','  shift, and go to state 25

    $default  reduce using rule 18 (lista_params)


state 21

    6 def_variavel: TK_ID ':' tipo ';' .

    $default  reduce using rule 6 (def_variavel)


state 22

   10 tipo: tipo '[' . ']'

    ']'  shift, and go to state 26


state 23

   20 parametro: TK_ID ':' . tipo

    TK_INT    shift, and go to state 11
    TK_FLOAT  shift, and go to state 12
    TK_CHAR   shift, and go to state 13
    TK_VOID   shift, and go to state 14

    tipo            go to state 27
    tipo_primitivo  go to state 16


state 24

   15 def_funcao: TK_ID '(' parametros ')' . ':' tipo bloco

    ':'  shift, and go to state 28


state 25

   19 lista_params: parametro ',' . parametros

    TK_ID  shift, and go to state 17

    $default  reduce using rule 17 (parametros)

    parametros    go to state 29
    lista_params  go to state 19
    parametro     go to state 20


state 26

   10 tipo: tipo '[' ']' .

    $default  reduce using rule 10 (tipo)


state 27

   10 tipo: tipo . '[' ']'
   20 parametro: TK_ID ':' tipo .

    '['  shift, and go to state 22

    $default  reduce using rule 20 (parametro)


state 28

   15 def_funcao: TK_ID '(' parametros ')' ':' . tipo bloco

    TK_INT    shift, and go to state 11
    TK_FLOAT  shift, and go to state 12
    TK_CHAR   shift, and go to state 13
    TK_VOID   shift, and go to state 14

    tipo            go to state 30
    tipo_primitivo  go to state 16


state 29

   19 lista_params: parametro ',' parametros .

    $default  reduce using rule 19 (lista_params)


state 30

   10 tipo: tipo . '[' ']'
   15 def_funcao: TK_ID '(' parametros ')' ':' tipo . bloco

    '['  shift, and go to state 22
    '{'  shift, and go to state 31

    bloco  go to state 32


state 31

   21 bloco: '{' . lista_def_var lista_comandos '}'

    $default  reduce using rule 8 (lista_def_var)

    lista_def_var  go to state 33


state 32

   15 def_funcao: TK_ID '(' parametros ')' ':' tipo bloco .

    $default  reduce using rule 15 (def_funcao)


state 33

    7 lista_def_var: lista_def_var . def_variavel
   21 bloco: '{' lista_def_var . lista_comandos '}'

    TK_ID  shift, and go to state 34

    TK_ID     [reduce using rule 23 (lista_comandos)]
    $default  reduce using rule 23 (lista_comandos)

    def_variavel    go to state 35
    lista_comandos  go to state 36


state 34

    6 def_variavel: TK_ID . ':' tipo ';'

    ':'  shift, and go to state 7


state 35

    7 lista_def_var: lista_def_var def_variavel .

    $default  reduce using rule 7 (lista_def_var)


state 36

   21 bloco: '{' lista_def_var lista_comandos . '}'
   22 lista_comandos: lista_comandos . comando

    TK_NEW     shift, and go to state 37
    TK_IF      shift, and go to state 38
    TK_WHILE   shift, and go to state 39
    TK_RETURN  shift, and go to state 40
    TK_DEC     shift, and go to state 41
    TK_REAL    shift, and go to state 42
    TK_ID      shift, and go to state 43
    TK_STRING  shift, and go to state 44
    '('        shift, and go to state 45
    '{'        shift, and go to state 31
    '}'        shift, and go to state 46
    '@'        shift, and go to state 47
    '-'        shift, and go to state 48
    '!'        shift, and go to state 49

    bloco           go to state 50
    comando         go to state 51
    cmd_return      go to state 52
    variavel        go to state 53
    chamada         go to state 54
    expressao_base  go to state 55
    expressao       go to state 56
    expAs           go to state 57
    expNew          go to state 58
    expLogica       go to state 59
    expAnd          go to state 60
    expCmp          go to state 61
    expAdd          go to state 62
    expMult         go to state 63
    expUnaria       go to state 64


state 37

   49 expNew: TK_NEW . tipo '[' expLogica ']'

    TK_INT    shift, and go to state 11
    TK_FLOAT  shift, and go to state 12
    TK_CHAR   shift, and go to state 13
    TK_VOID   shift, and go to state 14

    tipo            go to state 65
    tipo_primitivo  go to state 16


state 38

   29 comando: TK_IF . expLogica bloco
   30        | TK_IF . expLogica bloco TK_ELSE bloco

    TK_DEC     shift, and go to state 41
    TK_REAL    shift, and go to state 42
    TK_ID      shift, and go to state 43
    TK_STRING  shift, and go to state 44
    '('        shift, and go to state 45
    '-'        shift, and go to state 48
    '!'        shift, and go to state 49

    variavel        go to state 66
    chamada         go to state 54
    expressao_base  go to state 55
    expLogica       go to state 67
    expAnd          go to state 60
    expCmp          go to state 61
    expAdd          go to state 62
    expMult         go to state 63
    expUnaria       go to state 64


state 39

   31 comando: TK_WHILE . expLogica bloco

    TK_DEC     shift, and go to state 41
    TK_REAL    shift, and go to state 42
    TK_ID      shift, and go to state 43
    TK_STRING  shift, and go to state 44
    '('        shift, and go to state 45
    '-'        shift, and go to state 48
    '!'        shift, and go to state 49

    variavel        go to state 66
    chamada         go to state 54
    expressao_base  go to state 55
    expLogica       go to state 68
    expAnd          go to state 60
    expCmp          go to state 61
    expAdd          go to state 62
    expMult         go to state 63
    expUnaria       go to state 64


state 40

   32 cmd_return: TK_RETURN . expressao ';'

    TK_NEW     shift, and go to state 37
    TK_DEC     shift, and go to state 41
    TK_REAL    shift, and go to state 42
    TK_ID      shift, and go to state 43
    TK_STRING  shift, and go to state 44
    '('        shift, and go to state 45
    '-'        shift, and go to state 48
    '!'        shift, and go to state 49

    variavel        go to state 66
    chamada         go to state 54
    expressao_base  go to state 55
    expressao       go to state 69
    expAs           go to state 57
    expNew          go to state 58
    expLogica       go to state 59
    expAnd          go to state 60
    expCmp          go to state 61
    expAdd          go to state 62
    expMult         go to state 63
    expUnaria       go to state 64


state 41

   40 expressao_base: TK_DEC .

    $default  reduce using rule 40 (expressao_base)


state 42

   41 expressao_base: TK_REAL .

    $default  reduce using rule 41 (expressao_base)


state 43

   33 variavel: TK_ID .
   35 chamada: TK_ID . '(' expressoes ')'

    '('  shift, and go to state 70

    $default  reduce using rule 33 (variavel)


state 44

   42 expressao_base: TK_STRING .

    $default  reduce using rule 42 (expressao_base)


state 45

   44 expressao_base: '(' . expLogica ')'

    TK_DEC     shift, and go to state 41
    TK_REAL    shift, and go to state 42
    TK_ID      shift, and go to state 43
    TK_STRING  shift, and go to state 44
    '('        shift, and go to state 45
    '-'        shift, and go to state 48
    '!'        shift, and go to state 49

    variavel        go to state 66
    chamada         go to state 54
    expressao_base  go to state 55
    expLogica       go to state 71
    expAnd          go to state 60
    expCmp          go to state 61
    expAdd          go to state 62
    expMult         go to state 63
    expUnaria       go to state 64


state 46

   21 bloco: '{' lista_def_var lista_comandos '}' .

    $default  reduce using rule 21 (bloco)


state 47

   26 comando: '@' . expressao ';'

    TK_NEW     shift, and go to state 37
    TK_DEC     shift, and go to state 41
    TK_REAL    shift, and go to state 42
    TK_ID      shift, and go to state 43
    TK_STRING  shift, and go to state 44
    '('        shift, and go to state 45
    '-'        shift, and go to state 48
    '!'        shift, and go to state 49

    variavel        go to state 66
    chamada         go to state 54
    expressao_base  go to state 55
    expressao       go to state 72
    expAs           go to state 57
    expNew          go to state 58
    expLogica       go to state 59
    expAnd          go to state 60
    expCmp          go to state 61
    expAdd          go to state 62
    expMult         go to state 63
    expUnaria       go to state 64


state 48

   72 expUnaria: '-' . expressao_base

    TK_DEC     shift, and go to state 41
    TK_REAL    shift, and go to state 42
    TK_ID      shift, and go to state 43
    TK_STRING  shift, and go to state 44
    '('        shift, and go to state 45

    variavel        go to state 66
    chamada         go to state 54
    expressao_base  go to state 73


state 49

   73 expUnaria: '!' . expressao_base

    TK_DEC     shift, and go to state 41
    TK_REAL    shift, and go to state 42
    TK_ID      shift, and go to state 43
    TK_STRING  shift, and go to state 44
    '('        shift, and go to state 45

    variavel        go to state 66
    chamada         go to state 54
    expressao_base  go to state 74


state 50

   24 comando: bloco .

    $default  reduce using rule 24 (comando)


state 51

   22 lista_comandos: lista_comandos comando .

    $default  reduce using rule 22 (lista_comandos)


state 52

   27 comando: cmd_return .

    $default  reduce using rule 27 (comando)


state 53

   28 comando: variavel . '=' expressao ';'
   43 expressao_base: variavel .

    '='  shift, and go to state 75

    $default  reduce using rule 43 (expressao_base)


state 54

   45 expressao_base: chamada .

    $default  reduce using rule 45 (expressao_base)


state 55

   34 variavel: expressao_base . '[' expLogica ']'
   71 expUnaria: expressao_base .

    '['  shift, and go to state 76

    $default  reduce using rule 71 (expUnaria)


state 56

   25 comando: expressao . ';'

    ';'  shift, and go to state 77


state 57

   47 expressao: expAs .

    $default  reduce using rule 47 (expressao)


state 58

   46 expressao: expNew .

    $default  reduce using rule 46 (expressao)


state 59

   48 expAs: expLogica . TK_AS tipo
   50 expNew: expLogica .
   51 expLogica: expLogica . TK_OR expAnd

    TK_AS  shift, and go to state 78
    TK_OR  shift, and go to state 79

    $default  reduce using rule 50 (expNew)


state 60

   52 expLogica: expAnd .
   54 expAnd: expAnd . TK_AND expCmp

    TK_AND  shift, and go to state 80

    $default  reduce using rule 52 (expLogica)


state 61

   53 expAnd: expCmp .
   61 expCmp: expCmp . opCmp expAdd

    TK_EQUAL         shift, and go to state 81
    TK_NOTEQUAL      shift, and go to state 82
    TK_LESSEQUAL     shift, and go to state 83
    TK_GREATEREQUAL  shift, and go to state 84
    '<'              shift, and go to state 85
    '>'              shift, and go to state 86

    $default  reduce using rule 53 (expAnd)

    opCmp  go to state 87


state 62

   62 expCmp: expAdd .
   65 expAdd: expAdd . addOp expMult

    '+'  shift, and go to state 88
    '-'  shift, and go to state 89

    $default  reduce using rule 62 (expCmp)

    addOp  go to state 90


state 63

   66 expAdd: expMult .
   69 expMult: expMult . multOp expUnaria

    '*'  shift, and go to state 91
    '/'  shift, and go to state 92

    $default  reduce using rule 66 (expAdd)

    multOp  go to state 93


state 64

   70 expMult: expUnaria .

    $default  reduce using rule 70 (expMult)


state 65

   10 tipo: tipo . '[' ']'
   49 expNew: TK_NEW tipo . '[' expLogica ']'

    '['  shift, and go to state 94


state 66

   43 expressao_base: variavel .

    $default  reduce using rule 43 (expressao_base)


state 67

   29 comando: TK_IF expLogica . bloco
   30        | TK_IF expLogica . bloco TK_ELSE bloco
   51 expLogica: expLogica . TK_OR expAnd

    TK_OR  shift, and go to state 79
    '{'    shift, and go to state 31

    bloco  go to state 95


state 68

   31 comando: TK_WHILE expLogica . bloco
   51 expLogica: expLogica . TK_OR expAnd

    TK_OR  shift, and go to state 79
    '{'    shift, and go to state 31

    bloco  go to state 96


state 69

   32 cmd_return: TK_RETURN expressao . ';'

    ';'  shift, and go to state 97


state 70

   35 chamada: TK_ID '(' . expressoes ')'

    TK_DEC     shift, and go to state 41
    TK_REAL    shift, and go to state 42
    TK_ID      shift, and go to state 43
    TK_STRING  shift, and go to state 44
    '('        shift, and go to state 45
    '-'        shift, and go to state 48
    '!'        shift, and go to state 49

    $default  reduce using rule 37 (expressoes)

    variavel        go to state 66
    chamada         go to state 54
    expressoes      go to state 98
    lista_exp       go to state 99
    expressao_base  go to state 55
    expLogica       go to state 100
    expAnd          go to state 60
    expCmp          go to state 61
    expAdd          go to state 62
    expMult         go to state 63
    expUnaria       go to state 64


state 71

   44 expressao_base: '(' expLogica . ')'
   51 expLogica: expLogica . TK_OR expAnd

    TK_OR  shift, and go to state 79
    ')'    shift, and go to state 101


state 72

   26 comando: '@' expressao . ';'

    ';'  shift, and go to state 102


state 73

   34 variavel: expressao_base . '[' expLogica ']'
   72 expUnaria: '-' expressao_base .

    '['  shift, and go to state 76

    $default  reduce using rule 72 (expUnaria)


state 74

   34 variavel: expressao_base . '[' expLogica ']'
   73 expUnaria: '!' expressao_base .

    '['  shift, and go to state 76

    $default  reduce using rule 73 (expUnaria)


state 75

   28 comando: variavel '=' . expressao ';'

    TK_NEW     shift, and go to state 37
    TK_DEC     shift, and go to state 41
    TK_REAL    shift, and go to state 42
    TK_ID      shift, and go to state 43
    TK_STRING  shift, and go to state 44
    '('        shift, and go to state 45
    '-'        shift, and go to state 48
    '!'        shift, and go to state 49

    variavel        go to state 66
    chamada         go to state 54
    expressao_base  go to state 55
    expressao       go to state 103
    expAs           go to state 57
    expNew          go to state 58
    expLogica       go to state 59
    expAnd          go to state 60
    expCmp          go to state 61
    expAdd          go to state 62
    expMult         go to state 63
    expUnaria       go to state 64


state 76

   34 variavel: expressao_base '[' . expLogica ']'

    TK_DEC     shift, and go to state 41
    TK_REAL    shift, and go to state 42
    TK_ID      shift, and go to state 43
    TK_STRING  shift, and go to state 44
    '('        shift, and go to state 45
    '-'        shift, and go to state 48
    '!'        shift, and go to state 49

    variavel        go to state 66
    chamada         go to state 54
    expressao_base  go to state 55
    expLogica       go to state 104
    expAnd          go to state 60
    expCmp          go to state 61
    expAdd          go to state 62
    expMult         go to state 63
    expUnaria       go to state 64


state 77

   25 comando: expressao ';' .

    $default  reduce using rule 25 (comando)


state 78

   48 expAs: expLogica TK_AS . tipo

    TK_INT    shift, and go to state 11
    TK_FLOAT  shift, and go to state 12
    TK_CHAR   shift, and go to state 13
    TK_VOID   shift, and go to state 14

    tipo            go to state 105
    tipo_primitivo  go to state 16


state 79

   51 expLogica: expLogica TK_OR . expAnd

    TK_DEC     shift, and go to state 41
    TK_REAL    shift, and go to state 42
    TK_ID      shift, and go to state 43
    TK_STRING  shift, and go to state 44
    '('        shift, and go to state 45
    '-'        shift, and go to state 48
    '!'        shift, and go to state 49

    variavel        go to state 66
    chamada         go to state 54
    expressao_base  go to state 55
    expAnd          go to state 106
    expCmp          go to state 61
    expAdd          go to state 62
    expMult         go to state 63
    expUnaria       go to state 64


state 80

   54 expAnd: expAnd TK_AND . expCmp

    TK_DEC     shift, and go to state 41
    TK_REAL    shift, and go to state 42
    TK_ID      shift, and go to state 43
    TK_STRING  shift, and go to state 44
    '('        shift, and go to state 45
    '-'        shift, and go to state 48
    '!'        shift, and go to state 49

    variavel        go to state 66
    chamada         go to state 54
    expressao_base  go to state 55
    expCmp          go to state 107
    expAdd          go to state 62
    expMult         go to state 63
    expUnaria       go to state 64


state 81

   55 opCmp: TK_EQUAL .

    $default  reduce using rule 55 (opCmp)


state 82

   56 opCmp: TK_NOTEQUAL .

    $default  reduce using rule 56 (opCmp)


state 83

   57 opCmp: TK_LESSEQUAL .

    $default  reduce using rule 57 (opCmp)


state 84

   58 opCmp: TK_GREATEREQUAL .

    $default  reduce using rule 58 (opCmp)


state 85

   59 opCmp: '<' .

    $default  reduce using rule 59 (opCmp)


state 86

   60 opCmp: '>' .

    $default  reduce using rule 60 (opCmp)


state 87

   61 expCmp: expCmp opCmp . expAdd

    TK_DEC     shift, and go to state 41
    TK_REAL    shift, and go to state 42
    TK_ID      shift, and go to state 43
    TK_STRING  shift, and go to state 44
    '('        shift, and go to state 45
    '-'        shift, and go to state 48
    '!'        shift, and go to state 49

    variavel        go to state 66
    chamada         go to state 54
    expressao_base  go to state 55
    expAdd          go to state 108
    expMult         go to state 63
    expUnaria       go to state 64


state 88

   63 addOp: '+' .

    $default  reduce using rule 63 (addOp)


state 89

   64 addOp: '-' .

    $default  reduce using rule 64 (addOp)


state 90

   65 expAdd: expAdd addOp . expMult

    TK_DEC     shift, and go to state 41
    TK_REAL    shift, and go to state 42
    TK_ID      shift, and go to state 43
    TK_STRING  shift, and go to state 44
    '('        shift, and go to state 45
    '-'        shift, and go to state 48
    '!'        shift, and go to state 49

    variavel        go to state 66
    chamada         go to state 54
    expressao_base  go to state 55
    expMult         go to state 109
    expUnaria       go to state 64


state 91

   67 multOp: '*' .

    $default  reduce using rule 67 (multOp)


state 92

   68 multOp: '/' .

    $default  reduce using rule 68 (multOp)


state 93

   69 expMult: expMult multOp . expUnaria

    TK_DEC     shift, and go to state 41
    TK_REAL    shift, and go to state 42
    TK_ID      shift, and go to state 43
    TK_STRING  shift, and go to state 44
    '('        shift, and go to state 45
    '-'        shift, and go to state 48
    '!'        shift, and go to state 49

    variavel        go to state 66
    chamada         go to state 54
    expressao_base  go to state 55
    expUnaria       go to state 110


state 94

   10 tipo: tipo '[' . ']'
   49 expNew: TK_NEW tipo '[' . expLogica ']'

    TK_DEC     shift, and go to state 41
    TK_REAL    shift, and go to state 42
    TK_ID      shift, and go to state 43
    TK_STRING  shift, and go to state 44
    ']'        shift, and go to state 26
    '('        shift, and go to state 45
    '-'        shift, and go to state 48
    '!'        shift, and go to state 49

    variavel        go to state 66
    chamada         go to state 54
    expressao_base  go to state 55
    expLogica       go to state 111
    expAnd          go to state 60
    expCmp          go to state 61
    expAdd          go to state 62
    expMult         go to state 63
    expUnaria       go to state 64


state 95

   29 comando: TK_IF expLogica bloco .
   30        | TK_IF expLogica bloco . TK_ELSE bloco

    TK_ELSE  shift, and go to state 112

    $default  reduce using rule 29 (comando)


state 96

   31 comando: TK_WHILE expLogica bloco .

    $default  reduce using rule 31 (comando)


state 97

   32 cmd_return: TK_RETURN expressao ';' .

    $default  reduce using rule 32 (cmd_return)


state 98

   35 chamada: TK_ID '(' expressoes . ')'

    ')'  shift, and go to state 113


state 99

   36 expressoes: lista_exp .

    $default  reduce using rule 36 (expressoes)


state 100

   38 lista_exp: expLogica .
   39          | expLogica . ',' lista_exp
   51 expLogica: expLogica . TK_OR expAnd

    TK_OR  shift, and go to state 79
    ','    shift, and go to state 114

    $default  reduce using rule 38 (lista_exp)


state 101

   44 expressao_base: '(' expLogica ')' .

    $default  reduce using rule 44 (expressao_base)


state 102

   26 comando: '@' expressao ';' .

    $default  reduce using rule 26 (comando)


state 103

   28 comando: variavel '=' expressao . ';'

    ';'  shift, and go to state 115


state 104

   34 variavel: expressao_base '[' expLogica . ']'
   51 expLogica: expLogica . TK_OR expAnd

    TK_OR  shift, and go to state 79
    ']'    shift, and go to state 116


state 105

   10 tipo: tipo . '[' ']'
   48 expAs: expLogica TK_AS tipo .

    '['  shift, and go to state 22

    $default  reduce using rule 48 (expAs)


state 106

   51 expLogica: expLogica TK_OR expAnd .
   54 expAnd: expAnd . TK_AND expCmp

    TK_AND  shift, and go to state 80

    $default  reduce using rule 51 (expLogica)


state 107

   54 expAnd: expAnd TK_AND expCmp .
   61 expCmp: expCmp . opCmp expAdd

    TK_EQUAL         shift, and go to state 81
    TK_NOTEQUAL      shift, and go to state 82
    TK_LESSEQUAL     shift, and go to state 83
    TK_GREATEREQUAL  shift, and go to state 84
    '<'              shift, and go to state 85
    '>'              shift, and go to state 86

    $default  reduce using rule 54 (expAnd)

    opCmp  go to state 87


state 108

   61 expCmp: expCmp opCmp expAdd .
   65 expAdd: expAdd . addOp expMult

    '+'  shift, and go to state 88
    '-'  shift, and go to state 89

    $default  reduce using rule 61 (expCmp)

    addOp  go to state 90


state 109

   65 expAdd: expAdd addOp expMult .
   69 expMult: expMult . multOp expUnaria

    '*'  shift, and go to state 91
    '/'  shift, and go to state 92

    $default  reduce using rule 65 (expAdd)

    multOp  go to state 93


state 110

   69 expMult: expMult multOp expUnaria .

    $default  reduce using rule 69 (expMult)


state 111

   49 expNew: TK_NEW tipo '[' expLogica . ']'
   51 expLogica: expLogica . TK_OR expAnd

    TK_OR  shift, and go to state 79
    ']'    shift, and go to state 117


state 112

   30 comando: TK_IF expLogica bloco TK_ELSE . bloco

    '{'  shift, and go to state 31

    bloco  go to state 118


state 113

   35 chamada: TK_ID '(' expressoes ')' .

    $default  reduce using rule 35 (chamada)


state 114

   39 lista_exp: expLogica ',' . lista_exp
